# horses

./: .gitignore  BUILD.md  HorseRacingAudioFirst.spec  Links.csv  PLAY_GAME.bat  README.md  pyproject.toml
android/: keystore.properties.example  settings.gradle.kts
content/: audio_providers.example.json  championship.json  elevenlabs_audio_prompts.json  elevenlabs_generation_state.json  generated_elevenlabs_sound_manifest.json  horses.json  obstacles.json  rivals.json  sound_manifest.json  stables.json  tracks.json  weather.json
context/: Context Compression.txt  architecture.md  build-plan.md  code-standards.md  library-docs.md  prd.md  progress-tracker.md  project-overview.md  project-state.md  ui-registry.md  ui-rules.md  ui-tokens.md
docs/: android-mobile-support.md  download_report.md  multiplayer-security-threat-model.md  prd.md  resource_research.md  security-remaining-steps.md  technical_design.md
horse_racing_game/: __main__.py
scripts/: build_cython.py  build_lang.py  build_pack.py  build_release.py  build_windows_release.py  check_android_release_env.py  distribute_release.py  gen_master_key.py  generate_elevenlabs_audio.py  package_all.py  package_android.py  package_linux.py  package_macos.py  package_windows.py  smoke_android_device.py  validate_release.py  validate_release_candidate.py  write_missing_audio_prompt_spec.py
tests/: test_accessibility.py  test_android_shell.py  test_app_quick_race.py  test_audio_asset_coverage.py  test_audio_routing.py  test_career.py  test_career_depth.py  test_championship.py  test_chat_session.py  (+54 more)
(+121 files in other folders)
