[project]
name = "horse-racing-audio-first"
version = "0.1.0"
requires-python = ">=3.10"
description = "Audio-first horse racing game prototype."
dependencies = [
    "cryptography>=43",
    "pygame-ce>=2.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["horse_racing_game"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ty.environment]
python-version = "3.10"

[dependency-groups]
dev = [
    "cython>=3.0",
    "setuptools>=70",
]
[project.scripts]
horse-racing-game = "horse_racing_game.app.pygame_main:main"
